--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -30,21 +30,25 @@
     "import matplotlib.pyplot as plt\n",
     "from prophet import Prophet\n",
     "import datetime as dt\n",
-    "#from datetime import date\n",
     "import tkinter.messagebox as mbox\n",
     "\n",
-    "from bs4 import BeautifulSoup\n",
-    "import time\n",
-    "from selenium import webdriver\n",
+    "\n",
     "from urllib.parse import urljoin\n",
-    "\n",
-    "\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = 'all'\n",
+    "\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(1, 'C:/Users/Woon/Desktop/Columbia/Applied Analytics/Term3/Sentiment_SNP')\n",
+    "import helper_functions\n",
+    "from helper_functions import *\n",
+    "\n",
+    "\n",
     "\n",
     "# Environment settings: \n",
     "pd.set_option('display.max_column', None)\n",
@@ -63,107 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fuction to collect the news doc via infinite scrolling\n",
-    "\n",
-    "def get_page(url):\n",
-    "    \"\"\"Download a webpage and return a beautiful soup doc\"\"\"\n",
-    "    ##### Web scrapper for infinite scrolling page #####\n",
-    "    driver = webdriver.Chrome(executable_path=r\"E:\\Chromedriver\\chromedriver_win32_chrome83\\chromedriver.exe\")\n",
-    "    driver.get(url)\n",
-    "    time.sleep(2)  # Allow 2 seconds for the web page to open\n",
-    "    scroll_pause_time = 1 # You can set your own pause time. My laptop is a bit slow so I use 1 sec\n",
-    "    screen_height = driver.execute_script(\"return window.screen.height;\")   # get the screen height of the web\n",
-    "    i = 1\n",
-    "\n",
-    "    while True:\n",
-    "        # scroll one screen height each time\n",
-    "        driver.execute_script(\"window.scrollTo(0, {screen_height}*{i});\".format(screen_height=screen_height, i=i))  \n",
-    "        i += 1\n",
-    "        time.sleep(scroll_pause_time)\n",
-    "        # update scroll height each time after scrolled, as the scroll height can change after we scrolled the page\n",
-    "        scroll_height = driver.execute_script(\"return document.body.scrollHeight;\")  \n",
-    "        # Break the loop when the height we need to scroll to is larger than the total scroll height\n",
-    "        if i == 20:\n",
-    "            break \n",
-    "\n",
-    "\n",
-    "    soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
-    "    return soup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to extract news tags from the doc\n",
-    "\n",
-    "def get_news_tags(doc):\n",
-    "    \"\"\"Get the list of tags containing news information\"\"\"\n",
-    "    news_class = \"Ov(h) Pend(44px) Pstart(25px)\" ## class name of div tag \n",
-    "    news_list  = doc.find_all('div', {'class': news_class})\n",
-    "    return news_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parsing news data from the news tags\n",
-    "\n",
-    "def parse_news(news_tag):\n",
-    "    \"\"\"Get the news data point and return dictionary\"\"\"\n",
-    "    news_source = news_tag.find_all('span')[0].text #source\n",
-    "    news_time = news_tag.find_all('span')[1].text #link\n",
-    "    news_headline = news_tag.find('a').text #heading\n",
-    "    news_content = news_tag.find('p').text #content\n",
-    "    news_image = news_tag.findParent().find('img')['src'] #thumb image\n",
-    "    return { 'source' : news_source,\n",
-    "            'time' : news_time,    \n",
-    "            'headline' : news_headline,\n",
-    "            'content' : news_content,\n",
-    "           }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to utilize all the above functions and organize the collected data into a dataframe\n",
-    "\n",
-    "def scrape_yahoo_news(url, path=None):\n",
-    "    \"\"\"Get the yahoo finance market news and write them to CSV file \"\"\"\n",
-    "    if path is None:\n",
-    "        path = 'stock-market-news.csv'\n",
-    "        \n",
-    "    #print('Requesting html page')\n",
-    "    doc = get_page(url)\n",
-    "\n",
-    "    #print('Extracting news tags')\n",
-    "    news_list = get_news_tags(doc)\n",
-    "\n",
-    "    #print('Parsing news tags')\n",
-    "    news_data = [parse_news(news_tag) for news_tag in news_list]\n",
-    "\n",
-    "    #print('Save the data to a CSV')\n",
-    "    news_df = pd.DataFrame(news_data)\n",
-    "    #news_df.to_csv(path, index=None)\n",
-    "    \n",
-    "    #This return statement is optional, we are doing this just analyze the final output \n",
-    "    return news_df "
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -176,13 +79,7 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.insert(1, 'C:/Users/Woon/Desktop/Columbia/Applied Analytics/Term3/Sentiment_SNP')\n",
-    "\n",
-    "import helper_functions\n",
-    "from helper_functions import *"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
